fixed alignment issues

--- a/public/assets/scss/_counter.scss
+++ b/public/assets/scss/_counter.scss
@@ -18,6 +18,7 @@
 	line-height: 1;
     margin-bottom: 0;
     font-family: $c_med;
+	text-align: center !important;
 }
 .plus-icon {
 	position: relative;
