--- a/public/assets/scss/_custome.scss
+++ b/public/assets/scss/_custome.scss
@@ -532,7 +532,7 @@ button.navigation-next {
 .counter-text {
   @media #{$sm,$xs} {
     .counter {
-      margin-left: 50px;
+      margin-left: 0px;
     }
   }
   .counter-title {
